# try-sketch

./: .gitignore  README.md  pyproject.toml
data/: EnterococciDataDownload-20230403-044231.parquet  README.md
notebooks/: convert_data_csv_to_parquet.ipynb  try-sketch-pollution-data copy.ipynb  try-sketch-pollution-data.ipynb
