[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "pandas>=2.0.0",
    "sketch>=0.3.5",
    "pyarrow>=11.0.0",
    "fastparquet>=2023.2.0",
    "notebook>=6.5.4",
    "geopy>=2.3.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "altair>=4.2.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
